--- a/share/ppg.html
+++ b/share/ppg.html
@@ -46,7 +46,8 @@
 
 (function() {
 
-navigator.serviceWorker.register("service_worker.js")
+if ("serviceWorker" in navigator)
+    navigator.serviceWorker.register("service_worker.js")
 
 const fps = 60
 const width = 320
