--- a/share/time_record.html
+++ b/share/time_record.html
@@ -32,20 +32,22 @@ body {
 }
 #diff, .record {
     text-align: center;
-    margin: 0 16px;
-    padding: 16px 0;
+    margin: 0 3vw;
+    padding: 3vh 0;
+    font-size: large;
 }
 .record {
     border-bottom: 1px solid black;
 }
 #undo {
-    margin: 16px;
-    height: 50px;
+    margin: 3vh 3vw;
+    padding: 3vh 0;
+    font-size: large;
 }
 #do {
-    margin: 16px;
+    margin: 3vh 3vw;
     flex: 1;
-    font-size: large;
+    font-size: x-large;
 }
     </style>
 
@@ -118,7 +120,7 @@ class DateUtil {
 class TimeRecordApp {
     constructor() {
         this.localStorageKey = "kirksud_time_record"
-        this.maxRecords = 5
+        this.maxRecords = 3
         this.records = []
 
         this.load()
@@ -165,7 +167,7 @@ class TimeRecordApp {
         return true
     }
     do(t=null) {
-        if (this.records.length === this.maxRecords)
+        while (this.records.length >= this.maxRecords)
             this.records.shift()
         this.records.push(t ?? Date.now())
         this.update()
