--- a/share/2048.html
+++ b/share/2048.html
@@ -26,7 +26,7 @@
             width: 100%;
             height: 100%;
             overflow-y: hidden;
-            /* to disable chrome mobile pull-to-refresh: https://stackoverflow.com/questions/29008194/disabling-androids-chrome-pull-down-to-refresh-feature */
+            /* to disable chrome mobile pull-to-refresh: https://stackoverflow.com/questions/29008194/ */
             user-select: none;
             position: relative;
             font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
@@ -422,7 +422,9 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
     <script>
 
         if ("serviceWorker" in navigator)
@@ -509,11 +511,14 @@
             });
 
             // touch swipe
-            class Swipe { // from https://stackoverflow.com/a/39545306/, https://stackoverflow.com/questions/2264072/detect-a-finger-swipe-through-javascript-on-the-iphone-and-android/39545306#39545306
+            class Swipe {
+                // https://stackoverflow.com/a/39545306/
                 constructor(element) {
                     this.xDown = null;
                     this.yDown = null;
-                    this.element = typeof(element) === 'string' ? document.querySelector(element) : element;
+                    this.element = (
+                        typeof(element) === 'string'
+                    ) ? document.querySelector(element) : element;
             
                     this.element.addEventListener('touchstart', function(evt) {
                         this.xDown = evt.touches[0].clientX;
@@ -546,7 +551,8 @@
                     this.xDiff = this.xDown - xUp;
                     this.yDiff = this.yDown - yUp;
             
-                    if ( Math.abs( this.xDiff ) > Math.abs( this.yDiff ) ) { // Most significant.
+                    if ( Math.abs( this.xDiff ) > Math.abs( this.yDiff ) ) {
+                        // Most significant.
                         if ( this.xDiff > 0 ) {
                             if (this.xDiff > 8) {
                                 this.onLeft();
@@ -618,7 +624,7 @@
                     setTimeout(autoPlay2048_2dir_func, ms);
                 }, ms);
             };
-            // https://stackoverflow.com/questions/22342854/what-is-the-optimal-algorithm-for-the-game-2048/23853848#23853848
+            // https://stackoverflow.com/a/23853848/
             // https://ronzil.github.io/2048-AI/
             autoPlay2048 = function(turn=100) {
                 if (autoPlayRunning) {
@@ -892,10 +898,13 @@
                 timeoutId = setTimeout(timeoutFunc, 200);
             }
             function createTile(a, b, anim=false) {
-                let newTile = $(`<div class="tile tile-${table[a][b]} pos-${a}-${b}">${table[a][b]}</div>`);
+                let newTile = $(`
+                    <div class="tile tile-${table[a][b]} pos-${a}-${b}">
+                        ${table[a][b]}</div>`);
                 tiles[a][b] = newTile;
                 $("#tile-div").append(newTile);
-                newTile.css("opacity"); // reflow: https://stackoverflow.com/questions/24148403/trigger-css-transition-on-appended-element
+                newTile.css("opacity");
+                // reflow: https://stackoverflow.com/questions/24148403/
                 if (anim) {
                     newTile.addClass("tile-pop");
                 }
@@ -920,72 +929,7 @@
                 createTile(pos[0], pos[1]);
             }
         });
-        /*
 
-By cursor color:
-101 110 119 fg 2 4
-242 246 249 fg 8 16 32 64 128
-218 228 238 2
-200 224 237 4
-121 177 242 8
- 99 149 245 16
- 96 127 246 32
- 61  98 246 64
-114 207 237 128
- 97 204 237 256
- 80 200 237 512
-
-From https://scrambledeggsontoast.github.io/2014/05/09/writing-2048-elm/:
-                   Number 512 -> rgb 237 200 80
-                  Number 1024 -> rgb 237 197 63
-                  Number 2048 -> rgb 237 194 46
-
-From https://play2048.co/style/main.css:
-        .tile-2 {
-            color: rgb(101, 110, 119);
-            background-color: #eee4da;
-        }
-        .tile-4 {
-            color: rgb(101, 110, 119);
-            background-color: #ede0c8;
-        }
-        .tile-8 {
-            color: #f9f6f2;
-            background-color: #f2b179;
-        }
-        .tile-16 {
-            color: #f9f6f2;
-            background-color: #f59563;
-        }
-        .tile-32 {
-            color: #f9f6f2;
-            background-color: #f67c5f;
-        }
-        .tile-64 {
-            color: #f9f6f2;
-            background-color: #f65e3b;
-        }
-        .tile-128 {
-            color: #f9f6f2;
-            background-color: #edcf72;
-        }
-        .tile-256 {
-            color: #f9f6f2;
-            background-color: #edcc61;
-        }
-        .tile-512 {
-            color: #f9f6f2;
-            background-color: #edc850;
-        }
-        .tile-1024 {
-            color: #f9f6f2;
-            background-color: #edc53f;
-        }
-        .tile-2048 {
-            color: #f9f6f2;
-            background-color: #edc22e;
-        }
-        */
     </script>
 </body>
 
