--- a/share/dtts.html
+++ b/share/dtts.html
@@ -31,7 +31,7 @@
             width: 100%;
             height: 100%;
             overflow-y: hidden;
-            /* to disable chrome mobile pull-to-refresh: https://stackoverflow.com/questions/29008194/disabling-androids-chrome-pull-down-to-refresh-feature */
+            /* to disable chrome mobile pull-to-refresh: https://stackoverflow.com/questions/29008194/ */
             user-select: none;
             position: relative;
             font-weight: bold;
@@ -325,8 +325,12 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.2.0/dist/tf.min.js" integrity="sha256-J9iK/e7dz7abCBHQvsXk9N47NKMDpSb+d/pnOpF3DsA=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.2.0/dist/tf.min.js"
+        integrity="sha256-J9iK/e7dz7abCBHQvsXk9N47NKMDpSb+d/pnOpF3DsA="
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
     <script>
 
         if ("serviceWorker" in navigator)
