--- a/share/tic_tac_toe.html
+++ b/share/tic_tac_toe.html
@@ -178,6 +178,9 @@ body {
     <script>
 (function() {
 
+if ("serviceWorker" in navigator)
+    navigator.serviceWorker.register("service_worker.js")
+
 function $(selectors, element=document) {
     return element.querySelector(selectors)
 }
