--- a/share/loop.html
+++ b/share/loop.html
@@ -41,7 +41,7 @@ body {
     font-weight: bold;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 8fr 5fr 4fr;
+    grid-template-rows: 2fr 1fr 1fr;
 }
 #game-head h1 {
     display: flex;
@@ -53,27 +53,21 @@ body {
     font-size: 10vh;
     margin: 0;
 }
-#game-head div {
-    background-color: #bbada0;
-    grid-column: 1 / span 2;
+#game-head input {
+    min-width: 0;  /* Chrome input in grid doesn't shrink */
 }
 #game-head a {
     background-color: #8f7a66;
-}
-#game-head div, #game-head a {
+    color: white;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    border-radius: 1.2vmin;
-    margin: 2px;
-    font-size: 2.5vw;
 }
-#game-head div input {
-    align-self: stretch;
-    flex: 1;
-    margin: 1.5vmin;
+#game-head input, #game-head a {
+    margin: 2px;
+    border-radius: 1.2vmin;
+    font-size: 2.5vw;
 }
 #game-head * {
     cursor: pointer;
@@ -91,6 +85,8 @@ body {
 }
 #game-div svg {
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    /* to hide the blue highlight on tap on Chrome */
 }
 #game-div svg circle { display: none; }
 #game-div svg.cell1 circle { display: initial; }
@@ -131,7 +127,7 @@ body {
         margin: 1vh 0;
         display: grid;
         grid-template-columns: 5fr 2fr 2fr;
-        grid-template-rows: 5fr 4fr;
+        grid-template-rows: 1fr 1fr;
     }
     #game-div {
         left: calc(50vw - 40vh);
@@ -143,10 +139,7 @@ body {
         grid-row: 1 / span 2;
         grid-column: 1 / span 1;
     }
-    #game-head div {
-        grid-column: 2 / span 2;
-    }
-    #game-head div, #game-head a {
+    #game-head input, #game-head a {
         font-size: 3vh;
     }
 }
@@ -171,15 +164,12 @@ body {
 
 <body>
     <div id="game-head">
-        <h1>Loop</h1>
-        <div>
-            <input id="size-input" placeholder="size"
-                type="number" step="1" min="2" max="25" value="4">
-            <input id="thresh-input" placeholder="edge%"
-                type="number" step="1" min="1" max="100" value="50">
-        </div>
-        <a id="left-btn">Edit</a>
-        <a id="right-btn">Solve</a>
+        <h1 id="title-h1">Loop</h1>
+        <input id="size-input" placeholder="size"
+            type="number" step="1" min="2" max="25" value="4">
+        <a id="random-btn">Random</a>
+        <a id="edit-btn">Edit</a>
+        <a id="solve-btn">Solve</a>
     </div>
     <div id="game-div"></div>
 
@@ -369,19 +359,22 @@ class LoopGame {
 class LoopGameApp {
     constructor() {
         this.loopGame = new LoopGame()
+        this.slowMotion = false
         this.editing = false
         this.puzzle = [[0]]
         this.state = [[0]]
         this.resize(4)
         this.random()
+        $("#title-h1").addEventListener("click", () => this.toggleSlowMotion())
         $("#size-input").addEventListener("change", () => this.resize())
-        $("#left-btn").addEventListener("click", () => this.toggleMode())
-        $("#right-btn").addEventListener("click", () => {
-            if (this.editing)
-                this.random()
+        $("#random-btn").addEventListener("click", () => {
+            if (this.slowMotion)
+                this.autoPlay()
             else
-                this.solve()
+                this.random()
         })
+        $("#edit-btn").addEventListener("click", () => this.toggleEditing())
+        $("#solve-btn").addEventListener("click", () => this.solve())
     }
     resize(defaultSize=null) {
         let size = $("#size-input").value
@@ -419,21 +412,20 @@ class LoopGameApp {
             }
         this.random()
     }
-    toggleMode() {
+    toggleEditing() {
         this.editing = !this.editing
-        if (this.editing) {
-            $("#left-btn").innerText = "Play"
-            $("#right-btn").innerText = "Random"
-        }
-        else {
-            $("#left-btn").innerText = "Edit"
-            $("#right-btn").innerText = "Solve"
-        }
+        $("#edit-btn").innerText = (this.editing) ? "Play" : "Edit"
+    }
+    toggleSlowMotion() {
+        this.slowMotion = !this.slowMotion
+        if (this.slowMotion)
+            $("#title-h1").style["text-decoration"] = "underline"
+        else
+            $("#title-h1").style.removeProperty("text-decoration")
     }
     random() {
         const size = this.puzzle.length
-        const threshold = 1 - parseInt($("#thresh-input").value) / 100
-        this.puzzle = this.loopGame.randomPuzzle(size, size, threshold)
+        this.puzzle = this.loopGame.randomPuzzle(size, size)
         for (let i=0; i<size; i++)
             for (let j=0; j<size; j++) {
                 const n = this.loopGame.connections[this.puzzle[i][j]].length
@@ -442,13 +434,17 @@ class LoopGameApp {
             }
     }
     async solve() {
+        const slowMotion = this.slowMotion
         const solutions = await this.loopGame.solve(this.puzzle, async (row, col, state) => {
             while (this.state[row][col] !== state) {
-                await new Promise(r => setTimeout(r, 400))
-                // this.state[row][col] = state
-                this.state[row][col] = (
-                    this.state[row][col] + 1
-                ) % this.loopGame.connections[this.puzzle[row][col]].length
+                if (slowMotion) {
+                    await new Promise(r => setTimeout(r, 400))
+                    this.state[row][col] = (
+                        this.state[row][col] + 1
+                    ) % this.loopGame.connections[this.puzzle[row][col]].length
+                }
+                else
+                    this.state[row][col] = state
                 this.update(row, col)
             }
         })
@@ -481,7 +477,7 @@ class LoopGameApp {
         elem.classList.add(`rotate${this.state[row][col]}`)
     }
     async autoPlay() {
-        while (true) {
+        while (this.slowMotion) {
             this.random()
             await this.solve()
             await new Promise(r => setTimeout(r, 2000))
