--- a/share/memo.html
+++ b/share/memo.html
@@ -151,7 +151,7 @@ main p {
     </div>
 
     <div class="modal" id="folder-modal" role="dialog" aria-label="Folder" aria-hidden="false">
-      <div id="fodler-modal-dialog" class="modal-dialog modal-lg" role="document">
+      <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
 
           <div class="modal-header">
